--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <body>
     This Page is the revison of JS with 30 Days of Code(Github Version)
     assignments jello
+    now the thing begins
   </body>
 </html>
