Day1-Day20 Done

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/x-icon" href="/icon/website_logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>30 Days Of JS Answer Sheet</title>
     <script type="module" src="Day1-Day20_script.js"></script>
@@ -10,5 +11,11 @@
     This Page is the revison of JS with 30 Days of Code(Github Version)
     assignments jello
     now the thing begins
+    <h1 id="first-title">HELLO</h1>
+    <h1>HELLO</h1>
+    <h1>HELLO</h1>
+    <h1>HELLO</h1>
+    <h1>HELLO</h1>
+    <h1>HELLO</h1>
   </body>
 </html>
