Day21 DOM Ex3 Skeleton Done

--- a/DOM/indexDOM.html
+++ b/DOM/indexDOM.html
@@ -1,20 +1,26 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <!-- <style> html{
-        background-color: black;
-        color: white;
-    } </style> -->
+    <title>JavaScript for Everyone:DOM</title>
 </head>
+
 <body>
-    <p id="first_p">First paragraph</p>
-    <p id="second_p">Second paragraph</p>
-    <p id="third_p">third paragraph</p>
-    <p id="fourth_p">4th paragraph</p>
+    <div class="wrapper">
+        <h1>Asabeneh Yetayeh challenges in <span id="currentYear">2020</span></h1>
+        <h2>30DaysOfJavaScript Challenge</h2>
+        <ul>
+            <li>30DaysOfPython Challenge Done</li>
+            <li>30DaysOfJavaScript Challenge Ongoing</li>
+            <li>30DaysOfReact Challenge Coming</li>
+            <li>30DaysOfFullStack Challenge Coming</li>
+            <li>30DaysOfDataAnalysis Challenge Coming</li>
+            <li>30DaysOfReactNative Challenge Coming</li>
+            <li>30DaysOfMachineLearning Challenge Coming</li>
+        </ul>
+    </div>
     <script src="day21.js"></script>
-    change again
 </body>
+
 </html>
