--- a/DOM/indexDOM.html
+++ b/DOM/indexDOM.html
@@ -4,12 +4,17 @@
 
 <head>
     <title>JavaScript for Everyone:DOM</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div class="wrapper">
         <h1>Asabeneh Yetayeh challenges in <span id="currentYear">2020</span></h1>
-        <h2>30DaysOfJavaScript Challenge</h2>
+        <h2 id="challengeName">30DaysOfJavaScript Challenge</h2>
         <ul>
             <li>30DaysOfPython Challenge Done</li>
             <li>30DaysOfJavaScript Challenge Ongoing</li>
