--- a/Manipulate_DOM/indexMDOM.html
+++ b/Manipulate_DOM/indexMDOM.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
-</head>
-<body>
-    Hello we are starting DOM manipulation JSDay 22
+  </head>
+  <body>
+    <div class="info">
+      <h1>Number Generator</h1>
+      <h2>30DaysOfJavaScript:DOM Day 2</h2>
+      <h4>Author: Asabeneh Yetayeh</h4>
+    </div>
+    <div class="container"></div>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
