Manipulating DOM Exercise Day 2

--- a/Manipulate_DOM/indexMDOMex2.html
+++ b/Manipulate_DOM/indexMDOMex2.html
@@ -9,16 +9,17 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
-    <title>Manipulating DOM Exercise 1</title>
+    <link rel="stylesheet" href="styleEx2.css" />
+    <title>Manipulating DOM Exercise 2</title>
   </head>
   <body>
     <div class="info">
-      <h1>Number Generator</h1>
-      <h2>30DaysOfJavaScript:DOM Day 2</h2>
-      <h4>Author: Asabeneh Yetayeh</h4>
+      <h1>W O R L D &nbsp; C O U N T R I E S &nbsp; L I S T</h1>
+      <h3>Total Number of countries: <span>000</span></h3>
+      <p>30DaysOfJavaScript:DOM-Day-2</p>
+      <p>Author: Asabeneh Yetayeh</p>
     </div>
     <div class="container"></div>
-    <script src="script.js"></script>
+    <script type="module" src="scriptEx2.js"></script>
   </body>
 </html>
