--- a/Manipulate_DOM/indexMDOMex3.html
+++ b/Manipulate_DOM/indexMDOMex3.html
@@ -17,23 +17,32 @@
       <h1>Asabeneh Yetayeh challenges in <span id="currentYear">2020</span></h1>
       <h2 id="challengeName">30DaysOfJavaScript Challenge</h2>
     </div>
-    <div class="container">
-      <!-- <ul>
-        <li>30DaysOfPython Challenge Done</li>
-        <li>30DaysOfJavaScript Challenge Ongoing</li>
-        <li>30DaysOfReact Challenge Coming</li>
-        <li>30DaysOfFullStack Challenge Coming</li>
-        <li>30DaysOfDataAnalysis Challenge Coming</li>
-        <li>30DaysOfReactNative Challenge Coming</li>
-        <li>30DaysOfMachineLearning Challenge Coming</li>
-      </ul> -->
-    </div>
+    <div class="container"></div>
     <div class="bio">
       <h1>Asabeneh Yetayeh</h1>
       <div class="button">
-        <button>LinkedIn</button>
-        <button>X</button>
-        <button>GitHub</button>
+        <button style="background-color: white; border: none">
+          <img
+            src="../icon/linkedin.svg"
+            alt="
+            LinkedIn"
+            style="width: 35px; height: 35px"
+          />
+        </button>
+        <button style="background-color: white; border: none">
+          <img
+            src="../icon/twitter.svg"
+            alt="Twitter"
+            style="width: 35px; height: 35px"
+          />
+        </button>
+        <button style="background-color: white; border: none">
+          <img
+            src="../icon/github.svg"
+            alt="Github"
+            style="width: 35px; height: 35px"
+          />
+        </button>
       </div>
       <p>
         I am an educator, developer, motivator and content creator. I am a
@@ -42,7 +51,11 @@
         changing everyone to developer.
       </p>
     </div>
-    <div class="about"></div>
+    <div class="about">
+      <div class="titles css"><h2>Titles</h2></div>
+      <div class="skills css"><h2>Skills</h2></div>
+      <div class="degree css"><h2>Qualifications</h2></div>
+    </div>
     <div class="keywords"></div>
     <script type="module" src="scriptEx3.js"></script>
   </body>
