Exercise-3 UI also Done

--- a/Manipulate_DOM/indexMDOMex3.html
+++ b/Manipulate_DOM/indexMDOMex3.html
@@ -15,48 +15,53 @@
   <body>
     <div class="info">
       <h1>Asabeneh Yetayeh challenges in <span id="currentYear">2020</span></h1>
-      <h2 id="challengeName">30DaysOfJavaScript Challenge</h2>
+      <p id="challengeName">30DaysOfJavaScript Challenge</p>
     </div>
-    <div class="container"></div>
-    <div class="bio">
-      <h1>Asabeneh Yetayeh</h1>
-      <div class="button">
-        <button style="background-color: white; border: none">
-          <img
-            src="../icon/linkedin.svg"
-            alt="
+    <div id="box">
+      <div class="container"></div>
+      <div class="bio">
+        <h1>Asabeneh Yetayeh</h1>
+        <div class="button">
+          <button style="background-color: white; border: none">
+            <img
+              src="../icon/linkedin.svg"
+              alt="
             LinkedIn"
-            style="width: 35px; height: 35px"
-          />
-        </button>
-        <button style="background-color: white; border: none">
-          <img
-            src="../icon/twitter.svg"
-            alt="Twitter"
-            style="width: 35px; height: 35px"
-          />
-        </button>
-        <button style="background-color: white; border: none">
-          <img
-            src="../icon/github.svg"
-            alt="Github"
-            style="width: 35px; height: 35px"
-          />
-        </button>
+              style="width: 35px; height: 35px"
+            />
+          </button>
+          <button style="background-color: white; border: none">
+            <img
+              src="../icon/twitter.svg"
+              alt="Twitter"
+              style="width: 35px; height: 35px"
+            />
+          </button>
+          <button style="background-color: white; border: none">
+            <img
+              src="../icon/github.svg"
+              alt="Github"
+              style="width: 35px; height: 35px"
+            />
+          </button>
+        </div>
+        <p>
+          I am an educator, developer, motivator and content creator. I am a
+          life-long learner. If you like to know more about me checkout my
+          LinkedIn on Github profile. Thank you so much for joining in my quest
+          of changing everyone to developer.
+        </p>
       </div>
-      <p>
-        I am an educator, developer, motivator and content creator. I am a
-        life-long learner. If you like to know more about me checkout my
-        LinkedIn on Github profile. Thank you so much for joining in my quest of
-        changing everyone to developer.
-      </p>
+      <div class="about">
+        <div class="titles"><h2>Titles</h2></div>
+        <div class="skills"><h2>Skills</h2></div>
+        <div class="degree"><h2>Qualifications</h2></div>
+      </div>
+      <div id="footer">
+        <h2>Keywords</h2>
+        <div class="keywords"></div>
+      </div>
     </div>
-    <div class="about">
-      <div class="titles css"><h2>Titles</h2></div>
-      <div class="skills css"><h2>Skills</h2></div>
-      <div class="degree css"><h2>Qualifications</h2></div>
-    </div>
-    <div class="keywords"></div>
     <script type="module" src="scriptEx3.js"></script>
   </body>
 </html>
