--- a/EventHandling/index.html
+++ b/EventHandling/index.html
@@ -14,11 +14,17 @@
   </head>
   <body>
     <div class="info">
-      <h1>Number Generator</h1>
-      <h2>30DaysOfJavaScript:DOM Day 2</h2>
+      <h1 id="heading">Number Generator</h1>
+      <h2>30DaysOfJavaScript:DOM Day 3</h2>
       <h4>Author: Asabeneh Yetayeh</h4>
     </div>
-    <div class="container"></div>
+    <div id="genResult">
+      <div id="inputArea">
+        <input id="userinp" type="text" placeholder="Generate more numbers" />
+        <button class="btn">Generate Numbers</button>
+      </div>
+      <div class="container"></div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
