--- a/EventHandling/index.html
+++ b/EventHandling/index.html
@@ -18,12 +18,13 @@
       <h2>30DaysOfJavaScript:DOM Day 3</h2>
       <h4>Author: Asabeneh Yetayeh</h4>
     </div>
+    <p id="errorMsg">&nbsp;</p>
     <div id="genResult">
       <div id="inputArea">
         <input id="userinp" type="text" placeholder="Generate more numbers" />
         <button class="btn">Generate Numbers</button>
       </div>
-      <div class="container"></div>
+      <div class="container" id="container"></div>
     </div>
     <script src="script.js"></script>
   </body>
