Keycode UI done

--- a/EventHandling/indexKeycode.html
+++ b/EventHandling/indexKeycode.html
@@ -13,7 +13,8 @@
     <title>Keyboard KeyCode</title>
   </head>
   <body>
-    <h1>KeyCode</h1>
-    <script src="scriptKeycode.js"></script>
+    <div class="container">Press any keyboard key</div>
+    <!-- <div class="result">13</div> -->
+    <script type="module" src="scriptKeycode.js"></script>
   </body>
 </html>
