Exercise KeyCode Done

--- a/EventHandling/indexKeycode.html
+++ b/EventHandling/indexKeycode.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div class="container">Press any keyboard key</div>
-    <!-- <div class="result">13</div> -->
+    <div id="attachRes"></div>
     <script type="module" src="scriptKeycode.js"></script>
   </body>
 </html>
