--- a/Solar System/index.html
+++ b/Solar System/index.html
@@ -35,14 +35,7 @@
             onchange="changeImage()"
             class="form-inputs"
           >
-            <option
-              value="mercury"
-              disabled
-              selected
-              style="color: rgb(151, 150, 150)"
-            >
-              --select planet--
-            </option>
+            <option value="mercury" disabled selected>--select planet--</option>
             <option class="option-ui" value="./Images/bgremove/mercury.png">
               MERCURY
             </option>
