--- a/Solar System/index.html
+++ b/Solar System/index.html
@@ -15,7 +15,7 @@
     />
     <link rel="stylesheet" href="style.css" />
     <title>Solar System - Day 24</title>
-    <script src="projectScript.js"></script>
+    <script src="script.js"></script>
   </head>
   <body class="gifAttach">
     <section class="tools">
