--- a/Leaderboard/index.html
+++ b/Leaderboard/index.html
@@ -7,7 +7,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
-      rel="stylesheet" />
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Leaderboard</title>
   </head>
@@ -21,45 +22,37 @@
             type="text"
             id="first-name"
             placeholder="First Name"
-            class="inputStyle" />
+            class="inputStyle"
+          />
           <input
             type="text"
             id="last-name"
             placeholder="Last Name"
-            class="inputStyle" />
+            class="inputStyle"
+          />
           <input
             type="text"
             id="country"
             placeholder="Country"
-            class="inputStyle" />
+            class="inputStyle"
+          />
           <input
             type="number"
             id="score"
             placeholder="Score"
-            class="inputStyle" />
-          <button type="reset" onclick="addplayer()" class="addButton">
+            class="inputStyle"
+          />
+          <button type="reset" id="addingNewAccounts" class="addButton"" >
             Add Player
           </button>
         </form>
       </article>
     </header>
     <main id="score-cards">
-      <div class="grid-container" id="">
-        <div class="grid-item">
-          <p id="username">SHUBHAM PANDEY</p>
-          <p id="current-data-time" class="timimg">CURRENT Date - TIME</p>
-        </div>
-        <div class="grid-item" id="country-name">INDIA</div>
-        <div class="grid-item" id="user-score">100</div>
-        <div class="grid-item">
-          <button class="buttons delete-button" onclick="activateButtons()">
-            <img src="./images/delete.png" alt="del" />
-          </button>
-          <button class="buttons">+5</button>
-          <button class="buttons">-5</button>
-        </div>
       </div>
     </main>
-    <script src="script.js"></script>
+    <!-- using type="module" makes the JS scope modul type and the score of al function and variable are also module scope s accesing outside as we do in thos html code is not possible. if you want to call use Window object or EventListner -->
+    <script type="module" src="script.js">
+    </script>
   </body>
 </html>
