Day29 Animating Character Done

--- a/AnimatingCharacters/index.html
+++ b/AnimatingCharacters/index.html
@@ -7,9 +7,7 @@
     <title>Animating Characters</title>
   </head>
   <body>
-    <div id="color-text">
-      <div id="article-1"></div>
-    </div>
+    <div id="color-text"></div>
     <script type="module" src="script.js"></script>
   </body>
 </html>
