Sort button works

--- a/Form&WorldData/index.html
+++ b/Form&WorldData/index.html
@@ -29,9 +29,11 @@
           placeholder="Search Countries by name, city or languages"
         />
         <div id="btn-div">
-          <button class="search-btn">NAME</button>
-          <button class="search-btn">CAPITAL</button>
-          <button class="search-btn">POPULATION</button>
+          <button id="apply-name-sort" class="search-btn">NAME</button>
+          <button id="apply-capital-sort" class="search-btn">CAPITAL</button>
+          <button id="apply-population-sort" class="search-btn">
+            POPULATION
+          </button>
           <button class="search-btn">CHART LOGO</button>
         </div>
       </article>
