--- a/Form&WorldData/Form_Validation_Code/index.html
+++ b/Form&WorldData/Form_Validation_Code/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="finalFormStyle.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>Final - Form</title>
   </head>
   <body>
@@ -13,7 +13,7 @@
         <div id="first-name" class="flex-col">
           <label for="fname">First Name</label>
           <input type="text" id="fname" class="labels" autocomplete="on" />
-          <p id="fname-warning" class="warning" style="display: none">
+          <p class="warning" id="fname-warning" style="display: none">
             First name must be alpanumeric and contain 3 -16 characters
           </p>
         </div>
@@ -59,6 +59,6 @@
         </button>
       </form>
     </main>
-    <script src="finlaFormScript.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
